Name:                yesod-examples
Version:             0.4.0
Synopsis:            Example programs using the Yesod Web Framework.
Description:         These are the same examples and tutorials found on the documentation site.
Homepage:            http://docs.yesodweb.com/
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6

Executable helloworld
  Main-is:             yesod/helloworld.lhs
  Build-depends:       base >= 4 && < 5,
                       yesod >= 0.4.0 && < 0.5

Executable blog
  Main-is:             yesod/tutorial/blog.lhs

Executable chat
  Main-is:             yesod/tutorial/chat.lhs

Executable ajax
  Main-is:             yesod/tutorial/ajax.lhs

Executable file-echo
  Main-is:             yesod/tutorial/file-echo.lhs

Executable pretty-yaml
  Main-is:             yesod/tutorial/pretty-yaml.lhs
  Build-depends:       data-object-yaml >= 0.3.0 && < 0.4,
                       data-object >= 0.3.1 && < 0.4,
                       bytestring >= 0.9 && < 0.10

Executable i18n
  Main-is:             yesod/tutorial/i18n.lhs

Executable session
  Main-is:             yesod/tutorial/session.lhs

source-repository head
  type:     git
  location: git://github.com/snoyberg/yesoddocs.git
