Name:                yesod-examples
Version:             0.4.0
Synopsis:            Example programs using the Yesod Web Framework.
Description:         These are the same examples and tutorials found on the documentation site.
Homepage:            http://docs.yesodweb.com/
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6
extra-source-files:  static/yesod/ajax/script.js,
                     static/yesod/ajax/style.css

Executable helloworld
  Main-is:             yesod/helloworld.lhs
  Build-depends:       base >= 4 && < 5,
                       yesod >= 0.4.0 && < 0.5

Executable blog
  Main-is:             yesod/tutorial/blog.lhs

Executable chat
  Main-is:             yesod/tutorial/chat.lhs

Executable ajax
  Main-is:             yesod/tutorial/ajax.lhs

Executable file-echo
  Main-is:             yesod/tutorial/file-echo.lhs

Executable pretty-yaml
  Main-is:             yesod/tutorial/pretty-yaml.lhs
  Build-depends:       data-object-yaml >= 0.3.0 && < 0.4,
                       data-object >= 0.3.1 && < 0.4,
                       bytestring >= 0.9 && < 0.10

Executable i18n
  Main-is:             yesod/tutorial/i18n.lhs

Executable session
  Main-is:             yesod/tutorial/session.lhs

Executable widgets
  Main-is:             yesod/tutorial/widgets.lhs

Executable persistent-synopsis
  Main-is:             persistent/synopsis.lhs
  Build-depends:       transformers >= 0.2.1 && < 0.3,
                       persistent-sqlite >= 0.1.0 && < 0.2

Executable hamlet-synopsis
  Main-is:             hamlet/synopsis.lhs
  Build-depends:       hamlet >= 0.4.0 && < 0.5

source-repository head
  type:     git
  location: git://github.com/snoyberg/yesoddocs.git
