Name:                yesod-examples
Version:             0.5.1
Synopsis:            Example programs using the Yesod Web Framework.
Description:         These are the same examples and tutorials found on the documentation site.
Homepage:            http://docs.yesodweb.com/
License:             BSD3
License-file:        LICENSE
Author:              Michael Snoyman
Maintainer:          michael@snoyman.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6
extra-source-files:  static/yesod/ajax/script.js,
                     static/yesod/ajax/style.css

Executable blog
  Main-is:             yesod/tutorial/blog.lhs
  Build-depends:       base >= 4 && < 5,
                       yesod >= 0.5.0.1 && < 0.6

Executable ajax
  Main-is:             yesod/tutorial/ajax.lhs

Executable file-echo
  Main-is:             yesod/tutorial/file-echo.lhs

Executable pretty-yaml
  Main-is:             yesod/tutorial/pretty-yaml.lhs
  Build-depends:       data-object-yaml >= 0.3.0 && < 0.4,
                       data-object >= 0.3.1 && < 0.4,
                       bytestring >= 0.9 && < 0.10

Executable i18n
  Main-is:             yesod/tutorial/i18n.lhs

Executable session
  Main-is:             yesod/tutorial/session.lhs

Executable widgets
  Main-is:             yesod/tutorial/widgets.lhs

Executable generalized-hamlet
  Main-is:             yesod/tutorial/generalized-hamlet.lhs

Executable form
  Main-is:             yesod/tutorial/form.lhs

Executable mkToForm
  Main-is:             yesod/tutorial/mkToForm.hs
  Build-depends:       time,
                       persistent >= 0.2.0.1 && < 0.3

Executable persistent-synopsis
  Main-is:             synopsis/persistent.lhs
  Build-depends:       transformers >= 0.2.1 && < 0.3,
                       persistent-sqlite

Executable hamlet-synopsis
  Main-is:             synopsis/hamlet.lhs
  Build-depends:       hamlet

source-repository head
  type:     git
  location: git://github.com/snoyberg/yesoddocs.git
