name:              yesodwiki
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://yesodwiki.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Controller
    hs-source-dirs: ., config
    other-modules:   Wiki
                     Model
                     Settings
                     StaticFiles
                     Handler.Root

executable         yesodwiki
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded

    main-is:       config/yesodwiki.hs
    hs-source-dirs: ., config

    build-depends: base         >= 4       && < 5
                 , yesod-core   >= 0.8     && < 0.9
                 , yesod-auth   >= 0.6     && < 0.7
                 , yesod-form   >= 0.2     && < 0.3
                 , yesod-static < 0.2
                 , yesod-persistent
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , persistent
                 , persistent-template
                 , persistent-postgresql >= 0.5 && < 0.6
                 , template-haskell
                 , hamlet
                 , web-routes
                 , hjsmin
                 , transformers
                 , warp
                 , blaze-builder
                 , monad-control
                 , time
                 , wai
