name:              yesodwiki
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://yesodwiki.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Controller
    hs-source-dirs: ., config
    other-modules:   Wiki
                     Model
                     Settings
                     StaticFiles
                     Handler.Root
                     Handler.CreateTopic
                     Handler.CreateMap
                     Handler.EditMap
                     Handler.ShowMap
                     Handler.Topic
                     Handler.Feed
                     Handler.Settings
                     Handler.Labels
                     Handler.Browse
                     Handler.Blog
                     Handler.Book
                     Handler.UploadDitamap
                     Handler.DownloadDitamap
                     Handler.UploadBlogs
                     Handler.Search
                     Handler.Wiki
                     Util

executable         yesodwiki
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -Werror -threaded -O0

    main-is:       config/yesodwiki.hs
    hs-source-dirs: ., config

    build-depends: base         >= 4       && < 5
                 , yesod-core   >= 0.9     && < 0.10
                 , yesod-auth   >= 0.7     && < 0.8
                 , yesod-form   >= 0.3     && < 0.4
                 , yesod-static >= 0.3     && < 0.4
                 , yesod-persistent >= 0.2 && < 0.3
                 , yesod-newsfeed >= 0.3 && < 0.4
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , persistent            >= 0.6 && < 0.7
                 , persistent-template   >= 0.6 && < 0.7
                 , persistent-postgresql >= 0.6 && < 0.7
                 , template-haskell
                 , hamlet
                 , hjsmin
                 , transformers
                 , warp
                 , blaze-builder
                 , monad-control
                 , time
                 , wai
                 , parsec
                 , xss-sanitize
                 , attoparsec
                 , aeson
                 , containers
                 , vector
                 , pureMD5
                 , pandoc
                 , xml-types
                 , xml-enumerator
                 , zip-archive
                 , enumerator
                 , random
                 , old-locale
                 , base64-bytestring
                 , yesod-json
                 , blaze-html
                 , http-enumerator
                 , authenticate
                 , tagsoup >= 0.12.2 && < 0.13
                 , xml-hamlet >= 0.0 && < 0.1
