name:              yesoddocs
version:           0.1.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
synopsis:          Yesod documentation site
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://docs.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

executable         simple-server
    if flag(production)
        Buildable: False
    main-is:       simple-server.hs
    build-depends: base               >= 4          && < 5
                 , warp               >= 0.3        && < 0.4
                 , yesod              >= 0.7        && < 0.8
                 , yesod-static       >= 0.0        && < 0.1
                 , yesod-form         >= 0.0        && < 0.1
                 , yesod-newsfeed     >= 0.0        && < 0.1
                 , yesod-sitemap      >= 0.0        && < 0.1
                 , blaze-html         >= 0.4        && < 0.5
                 , wai-extra          >= 0.3        && < 0.4
                 , hamlet             >= 0.7        && < 0.8
                 , text               >= 0.11       && < 0.12
                 , data-object        >= 0.3        && < 0.4
                 , data-object-yaml   >= 0.3        && < 0.4
                 , directory          >= 1.0        && < 1.2
                 , bytestring         >= 0.9        && < 0.10
                 , cautious-file      >= 0.1.5      && < 0.2
                 , cereal             >= 0.3        && < 0.4
                 , time               >= 1.1.4      && < 1.3
                 , stm-io-hooks       >= 0.7        && < 0.8
                 , xhtml              >= 3000.2     && < 3000.3
                 , highlighting-kate  >= 0.2        && < 0.3
                 , utf8-string        >= 0.3.6      && < 0.4
                 , transformers       >= 0.2.2      && < 0.3
                 , enumerator         >= 0.4        && < 0.5
                 , xml-types          >= 0.2        && < 0.3
                 , xml-enumerator     >= 0.2        && < 0.3
                 , pandoc             >= 1.6        && < 1.7
                 , old-locale         >= 1.0        && < 1.1
                 , hscolour           >= 1.17       && < 1.18
                 , template-haskell
    ghc-options:   -Wall -threaded
    extensions:    TemplateHaskell, QuasiQuotes, TypeFamilies

executable         fastcgi
    if flag(production)
        Buildable: True
    else
        Buildable: False
    cpp-options:   -DPRODUCTION
    main-is:       fastcgi.hs
    build-depends: wai-handler-fastcgi == 0.3.*
    ghc-options:   -Wall -threaded
    extensions:    TemplateHaskell, QuasiQuotes, TypeFamilies
