name:              yesoddocs
version:           0.2.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
synopsis:          Yesod documentation site
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://www.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

executable         simple-server
    if flag(production)
        Buildable: False
    main-is:       simple-server.hs
    build-depends: base               >= 4          && < 5
                 , warp               >= 0.4        && < 0.5
                 , yesod              >= 0.8        && < 0.9
                 , yesod-static       >= 0.1        && < 0.2
                 , yesod-form         >= 0.1        && < 0.2
                 , yesod-newsfeed     >= 0.1        && < 0.2
                 , yesod-sitemap      >= 0.1        && < 0.2
                 , blaze-html         >= 0.4        && < 0.5
                 , wai-extra          >= 0.4        && < 0.5
                 , hamlet             >= 0.8        && < 0.9
                 , text               >= 0.11       && < 0.12
                 , data-object        >= 0.3        && < 0.4
                 , data-object-yaml   >= 0.3        && < 0.4
                 , directory          >= 1.0        && < 1.2
                 , bytestring         >= 0.9        && < 0.10
                 , cautious-file      >= 0.1.5      && < 0.2
                 , cereal             >= 0.3        && < 0.4
                 , time               >= 1.1.4      && < 1.3
                 , stm-io-hooks       >= 0.7        && < 0.8
                 , xhtml              >= 3000.2     && < 3000.3
                 , highlighting-kate  >= 0.2        && < 0.3
                 , utf8-string        >= 0.3.6      && < 0.4
                 , transformers       >= 0.2.2      && < 0.3
                 , enumerator         >= 0.4        && < 0.5
                 , xml-types          >= 0.3        && < 0.4
                 , xml-enumerator     >= 0.3        && < 0.4
                 , pandoc             >= 1.8        && < 1.9
                 , old-locale         >= 1.0        && < 1.1
                 , hscolour           >= 1.17       && < 1.18
                 , template-haskell
                 , xhtml              >= 3000       && < 3001
                 , pureMD5
    ghc-options:   -Wall -threaded -Werror

executable         fastcgi
    if flag(production)
        Buildable: True
        build-depends: wai-handler-fastcgi == 0.4.*
    else
        Buildable: False
    cpp-options:   -DPRODUCTION
    main-is:       fastcgi.hs
    ghc-options:   -Wall -threaded
